crates/lib/tests/snapshots/r#mod__parse_records.snap
---
source: crates/lib/tests/mod.rs
expression: "KafkaRecord::parse(owned_message, &mut None).await"
input_file: crates/lib/tests/inputs/raw-records/record-1.json
---
KafkaRecord {
    value: String(
        "A",
    ),
    value_as_string: "A",
    key: String(
        "A",
    ),
    key_as_string: "A",
    topic: "my-topic",
    timestamp: Some(
        0,
    ),
    partition: 0,
    offset: 0,
    headers: {},
    key_schema: None,
    value_schema: None,
    size: 2,
}
