crates/lib/tests/snapshots/r#mod__parse_records@record-2.json.snap
---
source: crates/lib/tests/mod.rs
expression: "KafkaRecord::parse(owned_message, &mut None).await"
input_file: crates/lib/tests/inputs/raw-records/record-2.json
---
KafkaRecord {
    topic: "my-topic",
    timestamp: Some(
        0,
    ),
    partition: 0,
    offset: 0,
    headers: {},
    key_schema: Some(
        Schema {
            id: SchemaId(
                1,
            ),
            schema_type: None,
        },
    ),
    value_schema: Some(
        Schema {
            id: SchemaId(
                2,
            ),
            schema_type: None,
        },
    ),
    size: 10,
    key: String(
        "Yozefu was not able to retrieve the schema 1 because there is no schema registry configured. Please visit https://github.com/MAIF/yozefu/blob/main/docs/schema-registry/README.md for more details.\nPayload: [0, 0, 0, 0, 1]\n String: \0\0\0\0\u{1}",
    ),
    key_as_string: "Yozefu was not able to retrieve the schema 1 because there is no schema registry configured. Please visit https://github.com/MAIF/yozefu/blob/main/docs/schema-registry/README.md for more details.\nPayload: [0, 0, 0, 0, 1]\n String: \0\0\0\0\u{1}",
    value: String(
        "Yozefu was not able to retrieve the schema 2 because there is no schema registry configured. Please visit https://github.com/MAIF/yozefu/blob/main/docs/schema-registry/README.md for more details.\nPayload: [0, 0, 0, 0, 2]\n String: \0\0\0\0\u{2}",
    ),
    value_as_string: "Yozefu was not able to retrieve the schema 2 because there is no schema registry configured. Please visit https://github.com/MAIF/yozefu/blob/main/docs/schema-registry/README.md for more details.\nPayload: [0, 0, 0, 0, 2]\n String: \0\0\0\0\u{2}",
}
